<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ContainerAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:background="@drawable/alert_dialog_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/attention"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/msg_alert_terms"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/alerta"
        android:padding="8dp"
        android:background="@drawable/background_image_view"
        app:layout_constraintBottom_toTopOf="@+id/ContainerAlert"
        app:layout_constraintTop_toTopOf="@+id/ContainerAlert"
        app:layout_constraintStart_toStartOf="@+id/ContainerAlert"
        app:layout_constraintEnd_toEndOf="@+id/ContainerAlert"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/start_btn_bg"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@+id/ContainerAlert"
        app:layout_constraintEnd_toEndOf="@+id/ContainerAlert"
        app:layout_constraintTop_toBottomOf="@+id/ContainerAlert"
        app:layout_constraintBottom_toBottomOf="@+id/ContainerAlert"/>
    


</androidx.constraintlayout.widget.ConstraintLayout>